--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,21 @@
 events {}
- http {
-    server {
-       listen 80;
-       server_name localhost;
-       location /  {
-         root /usr/share/nginx/html/Template;
-         index home.html home.htm;
-          }
-          error_page 500 502 503 504 /50.xhtml;
-          location = /50x.html {
-            root /usr/share/nginx/html;
-          }
-     }
-}
+
+http {
+    include mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;
+
+server {
+    listen       80;
+    server_name  localhost;
+    location / {
+        root   /usr/share/nginx/html/Template;
+        index  home.html home.htm;
+    }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }   
+    }
+ }
